# algo-vanity-rs

./: Cargo.toml  README.md
src/: main.rs  tui.rs
