[package]
name = "algo-vanity-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algo_rust_sdk = "1.0"
clap = {version="4.2",features=["derive"]}
ctrlc = "3"
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
ratatui = "0.24.0"
crossterm = "0.27.0"
thousands = "0.2.0"